--- a/src/app/pages/transacciones/transacciones.component.css
+++ b/src/app/pages/transacciones/transacciones.component.css
@@ -1,5 +1,27 @@
+table {
+    width: 100%;
+}
+
 .container {
     display: flex;
     justify-content: flex-end;
     margin-top: 30px;
+}
+
+mat-form-field {
+    color: aliceblue;
+}
+
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: rgb(255, 255, 255);
+}
+
+mat-label {
+    color: aliceblue;
+}
+
+.container-button button{
+    width: 100%;
+    background-color: #ffffff; 
+    color: black; 
 }
