--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,16 @@
   />
   <span style="font-family: monospace; font-size: larger;">Banco bnpm</span>
   <div class="spacer"></div>
-  <a mat-button="" href="https://github.com/angular/components" aria-label="GitHub Repository" class="mat-focus-indicator docs- docs-navbar-hide-small mat-button mat-button-base">
+  <a mat-button="" href="https://github.com/Laut1114/App-banco.git" aria-label="GitHub Repository" class="mat-focus-indicator docs- docs-navbar-hide-small mat-button mat-button-base">
     <span class="mat-button-wrapper" style="font-family: monospace; font-weight: bold; font-size: large;">
       <img _ngcontent-wdh-c49="" src="../assets/icons8-github.svg" alt="angular" class="docs-angular-logo">
-      GitHub
+      GitHub - App
+    </span>
+  </a>
+  <a mat-button="" href="https://github.com/Laut1114/api_bank.git" aria-label="GitHub Repository" class="mat-focus-indicator docs- docs-navbar-hide-small mat-button mat-button-base">
+    <span class="mat-button-wrapper" style="font-family: monospace; font-weight: bold; font-size: large;">
+      <img _ngcontent-wdh-c49="" src="../assets/icons8-github.svg" alt="angular" class="docs-angular-logo">
+      GitHub - Api
     </span>
   </a>
 </div>
