--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: monospace;
     font-size: 14px;
     color: #333;
     box-sizing: border-box;
@@ -52,7 +52,7 @@ p {
 }
 
 .content {
-    margin: 150px auto 32px;
+    margin: 120px auto 32px;
     padding: 0 16px;
     max-width: 70%;
 }
