--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -1,6 +1,6 @@
 <!-------------------------------------------------------------------------------- OPCION 1 - LISTAR USUARIOS --------------------------------------------------------------------------------->
 <div *ngIf="opcion[0] == '1'">
-    <p style="font-weight: bold;">Tabla de clientes</p>
+    <p style="color: #000; font-weight: bold; font-size: larger;">Tabla de clientes</p>
     <mat-table [dataSource]="usuarios" class="mat-elevation-z8">
         <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
@@ -45,7 +45,9 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-    <br>
+
+    <div class="spacer"></div>
+
     <div class="container">
         <button mat-raised-button style="background-color: #D6003D;" routerLink="/home">Volver</button>
     </div>
@@ -53,26 +55,37 @@
 
 <!-------------------------------------------------------------------------------- OPCION 2 - LISTAR A USUARIO POR ID --------------------------------------------------------------------------------->
 <div *ngIf="opcion[0] == '2'">
-    <p style="font-weight: bold;">Busqueda de Usuario</p>
-    <form class="example-form mat-elevation-z8" [formGroup]="formUser"
-        style="background-color: #474747; padding: 30px; border-radius: 12px;">
-        <table class="example-full-width" cellspacing="1">
-            <tr>
-                <mat-form-field appearance="outline" style="width: 100%;">
-                    <mat-label>Id del usuario</mat-label>
-                    <mat-hint>*Por favor ingrese el ID del usuario que busca</mat-hint>
-                    <input matInput formControlName="id" required>
-                </mat-form-field>
-            </tr>
-        </table>
+    <!-- FORMULARIO PARA INGRESAR EL ID DEL USUARIO -->
+    <div class="mat-elevation-z8" style="background-color: #474747; padding: 30px; border-radius: 12px;">
+        <p class="p-title">Busqueda de Usuario</p>
         <br>
-        <div class="container-button">
-            <button mat-raised-button (click)="getUser(formUser.value.id)">Buscar</button>
+        <form [formGroup]="formUser">
+            <table class="example-full-width">
+                <tr>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Id del usuario</mat-label>
+                        <mat-hint>*Por favor ingrese el ID del usuario que busca</mat-hint>
+                        <input matInput formControlName="id" required>
+                    </mat-form-field>
+                </tr>
+            </table>
+        </form>
+        <br>
+        <div *ngIf="formUser.invalid; else formValid">
+            <div class="container-button">
+                <button mat-raised-button disabled> Buscar </button>
+            </div>
         </div>
-    </form>
-    <br>
+        <ng-template #formValid>
+            <div class="container-button-valid">
+                <button mat-raised-button (click)="getUser(formUser.value.id)"> Buscar </button>
+            </div>
+        </ng-template>
+    </div>
+    <div class="spacer"></div>
+    <!-- TABLA CON LOS DATOS DEL USUARIO ENCONTRADO CON EL ID -->
     <div *ngIf="usuario.length > 0">
-        <p style="font-weight: bold;">Usuario</p>
+        <p class="p-title" style="color: #000;">Usuario</p>
         <mat-table [dataSource]="usuario" class="mat-elevation-z8">
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
@@ -118,7 +131,9 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
     </div>
-    <br>
+
+    <div class="spacer"></div>
+
     <div class="container">
         <button mat-raised-button style="background-color: #D6003D;" routerLink="/home">Volver</button>
     </div>
@@ -126,15 +141,15 @@
 
 <!-------------------------------------------------------------------------------- OPCION 3 - AGREGAR UN USUARIO --------------------------------------------------------------------------------->
 <div *ngIf="opcion[0] == '3'">
-    <p style="font-weight: bold;">Agregar un nuevo usuario</p>
-    <div>
-        <form class="example-form mat-elevation-z8" [formGroup]="formUser" 
-            style="background-color: #474747; padding: 30px; border-radius: 12px;">
+    <div class="example-form mat-elevation-z8" style="background-color: #474747; padding: 30px; border-radius: 12px;">
+        <p class="p-title">Agregar un nuevo usuario</p>
+        <br>
+        <form [formGroup]="formUser">
             <table class="example-full-width" cellspacing="1">
                 <tr>
                     <mat-form-field appearance="outline" style="width: 100%;">
                         <mat-label>Nombre se usuario</mat-label>
-                        <input matInput formControlName="username">
+                        <input matInput formControlName="username" required>
                     </mat-form-field>
                 </tr>
                 <tr>
@@ -146,9 +161,9 @@
                         <mat-label>Apellido</mat-label>
                         <input matInput formControlName="last_name">
                     </mat-form-field>
-                    <mat-form-field appearance="outline" style="width: 18.5%;">
+                    <mat-form-field appearance="outline" style="width: 18%;">
                         <mat-label>Rol</mat-label>
-                        <mat-select formControlName="groups">
+                        <mat-select formControlName="groups" required>
                             <mat-option style="color: whitesmoke;" value="cliente">Cliente</mat-option>
                             <mat-option style="color: whitesmoke;" value="empleado">Empleado</mat-option>
                             <mat-option style="color: whitesmoke;" value="gerente">Gerente</mat-option>
@@ -162,16 +177,16 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 44%;">
                         <mat-label>Password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+                        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
                     </mat-form-field>
                 </tr>
                 <tr>
-                    <mat-form-field appearance="outline" style="padding-right: 8px; width: 48.5%;">
+                    <mat-form-field appearance="outline" style="padding-right: 8px; width: 48%;">
                         <mat-label>Permisos del usuario</mat-label>
-                        <mat-select formControlName="user_permissions">
+                        <mat-select formControlName="user_permissions" required>
                             <mat-option style="color: whitesmoke;" value="usuario">Usuario</mat-option>
                             <mat-option style="color: whitesmoke;" value="invitado">Invitado</mat-option>
                             <mat-option style="color: whitesmoke;" value="admin">Administrador</mat-option>
@@ -179,27 +194,36 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="padding-right: 8px; width: 25%;">
                         <mat-label>Es staff</mat-label>
-                        <mat-select formControlName="is_staff" [value]="false">
+                        <mat-select formControlName="is_staff" [value]="false" required>
                             <mat-option value="true">Si</mat-option>
                             <mat-option value="false">No</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 25%;">
                         <mat-label>Es super-usuario</mat-label>
-                        <mat-select formControlName="is_root" [value]="false">
+                        <mat-select formControlName="is_root" [value]="false" required>
                             <mat-option value="true">Si</mat-option>
                             <mat-option value="false">No</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </tr>
             </table>
-            <br>
-            <div class="container-button">
-                <button mat-raised-button (click)="addUser(formUser.value)" routerLink="/home">Guardar</button>
-            </div>
         </form>
+        <br>
+        <div *ngIf="formUser.invalid; else formValid">
+            <div class="container-button">
+                <button mat-raised-button disabled> Guardar </button>
+            </div>
+        </div>
+        <ng-template #formValid>
+            <div class="container-button-valid">
+                <button mat-raised-button (click)="addUser(formUser.value)"> Guardar </button>
+            </div>
+        </ng-template>
     </div>
-    <br>
+    
+    <div class="spacer"></div>
+
     <div class="container">
         <button mat-raised-button style="background-color: #D6003D;" routerLink="/home">Volver</button>
     </div>
@@ -207,15 +231,15 @@
 
 <!-------------------------------------------------------------------------------- OPCION 4 - ACTUALIZAR A UN USUARIO --------------------------------------------------------------------------------->
 <div *ngIf="opcion[0] == '4'">
-    <p style="font-weight: bold;">Actualizar usuario</p>
-    <div>
-        <form class="example-form mat-elevation-z8" [formGroup]="formUser"
-            style="background-color: #474747; padding: 30px; border-radius: 12px;">
+    <div class="example-form mat-elevation-z8" style="background-color: #474747; padding: 30px; border-radius: 12px;">
+        <p class="p-title">Actualizar usuario</p>
+        <br>
+        <form [formGroup]="formUser">
             <table class="example-full-width" cellspacing="1">
                 <tr>
                     <mat-form-field appearance="outline" style="padding-right: 8px; width: 13%;">
                         <mat-label>Id del usuario</mat-label>
-                        <input matInput type="number" formControlName="id">
+                        <input matInput type="number" formControlName="id" required>
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 86%;">
                         <mat-label>Nombre se usuario</mat-label>
@@ -231,7 +255,7 @@
                         <mat-label>Apellido</mat-label>
                         <input matInput formControlName="last_name">
                     </mat-form-field>
-                    <mat-form-field appearance="outline" style="width: 18.5%;">
+                    <mat-form-field appearance="outline" style="width: 18%;">
                         <mat-label>Rol</mat-label>
                         <input matInput placeholder="Cliente" formControlName="groups">
                     </mat-form-field>
@@ -250,7 +274,7 @@
                     </mat-form-field>
                 </tr>
                 <tr>
-                    <mat-form-field appearance="outline" style="padding-right: 8px; width: 48.5%;">
+                    <mat-form-field appearance="outline" style="padding-right: 8px; width: 48%;">
                         <mat-label>Permisos del usuario</mat-label>
                         <mat-select formControlName="user_permissions">
                             <mat-option style="color: whitesmoke;" value="usuario">Usuario</mat-option>
@@ -274,21 +298,30 @@
                     </mat-form-field>
                 </tr>
             </table>
-            <br>
+        </form>
+        <br>
+        <div *ngIf="formUser.invalid; else formValid">
             <div class="container-button">
+                <button mat-raised-button disabled>Actualizar</button>
+            </div>
+        </div>
+        <ng-template #formValid>
+            <div class="container-button-valid">
                 <button mat-raised-button (click)="updateUser(formUser.value.id, formUser.value)" routerLink="/home">Actualizar</button>
             </div>
-        </form>
+        </ng-template>
     </div>
-    <br>
+
+    <div class="spacer"></div>
+
     <div class="container">
         <button mat-raised-button style="background-color: #D6003D;" routerLink="/home">Volver</button>
     </div>
 </div>
 
 <!-------------------------------------------------------------------------------- OPCION 5 - ELIMINAR A UN USUARIO ----------------------------------------------------------------------------------->
-<div *ngIf="opcion[0] == '5'">
-    <p style="font-weight: bold;">Eliminar un Usuario</p>
+<!-- <div *ngIf="opcion[0] == '5'">
+    <p class="p-title">Eliminar un Usuario</p>
     <form class="example-form mat-elevation-z8" [formGroup]="formUser"
         style="background-color: #474747; padding: 30px; border-radius: 12px;">
         <table class="example-full-width" cellspacing="1">
@@ -309,4 +342,4 @@
     <div class="container">
         <button mat-raised-button style="background-color: #D6003D;" routerLink="/home">Volver</button>
     </div>
-</div>
+</div> -->
